...

    @ViewBuilder
    private var tabs: some View {
        TabView(selection: $selectedTab) {
            PatientsTab()
                .tabItem {
                    Label("Patients", systemImage: "pawprint.fill")
                }
                .tag(Tab.patients)

            OwnersTab()
                .tabItem {
                    Label("Owners", systemImage: "person.crop.circle.fill")
...
